--- a/src/app/views/sign-in/sign-in.component.html
+++ b/src/app/views/sign-in/sign-in.component.html
@@ -1,36 +1,24 @@
-<mat-card>
-  <mat-card-title>Login</mat-card-title>
-  <mat-card-content>
-    <form [formGroup]="form" (ngSubmit)="submit()">
-      <div>
-        <mat-form-field>
-          <input
-            type="text"
-            matInput
-            placeholder="Username"
-            formControlName="username" />
-        </mat-form-field>
-      </div>
-
-      <div>
-        <mat-form-field>
-          <input
-            type="password"
-            matInput
-            placeholder="Password"
-            formControlName="password" />
-        </mat-form-field>
-      </div>
-
-      <p *ngIf="error" class="error">
-        {{ error }}
-      </p>
-
-      <div class="button">
-        <button type="submit" mat-raised-button color="primary" mat-button>
-          Login
-        </button>
-      </div>
-    </form>
-  </mat-card-content>
-</mat-card>
+<div class="relative">
+    <div
+        class="absolute inset-0 bg-[url(/assets/images/login/login-background.png)] bg-cover bg-bottom bg-no-repeat"
+    ></div>
+    <div class="flex items-center justify-center min-h-screen !pb-44">
+        <mat-card class="!bg-transparent !shadow-none">
+            <img src="/assets/images/icons/logo.svg" alt="" class="mx-auto" />
+            <div class="mt-6 text-2xl font-semibold text-center">Welcome to DACS/DAGW</div>
+            <mat-card-content class="mt-4">
+                <form [formGroup]="form" (ngSubmit)="submit()" class="flex flex-col justify-center w-96 mx-auto">
+                    <mat-form-field>
+                        <input type="text" matInput placeholder="Username" formControlName="username" />
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input type="password" matInput placeholder="Password" formControlName="password" />
+                    </mat-form-field>
+                    <p *ngIf="error" class="text-red-500">{{ error }}</p>
+                    <button type="submit" mat-raised-button class="!text-white !bg-[#0046AD]" mat-button>Login</button>
+                </form>
+                <a href="#" class="my-4 flex justify-center underline underline-offset-4">Forgot your password?</a>
+            </mat-card-content>
+        </mat-card>
+    </div>
+</div>
