feat(scan-card): change the screen design

--- a/src/app/views/scan-card/logged/logged.component.html
+++ b/src/app/views/scan-card/logged/logged.component.html
@@ -10,27 +10,27 @@
         </div>
     </div>
     <div class="form-container">
-        <div class="title">Please check if your details are correct:</div>
+        <div class="title">Please check if your details are correct</div>
         <div class="form-correct">
-            <div class="flex-data">
-                <div class="label">Service Number:</div>
-                <p class="value">{{ data.serviceNumber }}</p>
-            </div>
             <div class="flex-data">
                 <div class="label">Duty Number:</div>
                 <p class="value">{{ data.dutyNumber }}</p>
+            </div>
+            <div class="flex-data">
+                <div class="label">Staff ID:</div>
+                <p class="value">{{ data.staffId }}</p>
             </div>
             <div class="flex-data">
                 <div class="label">Bus Number:</div>
                 <p class="value">{{ data.busNumber }}</p>
             </div>
             <div class="flex-data">
-                <div class="label">Starting Bus Stop:</div>
-                <p class="value">{{ data.startingBusStop }}</p>
+                <div class="label">Service Number:</div>
+                <p class="value">{{ data.serviceNumber }}</p>
             </div>
             <div class="flex-data">
-                <div class="label">Staff ID:</div>
-                <p class="value">{{ data.staffId }}</p>
+                <div class="label">Starting Bus Stop:</div>
+                <p class="value">{{ data.startingBusStop }}</p>
             </div>
         </div>
         <div class="action">
