--- a/src/app/views/scan-card/logged/logged.component.scss
+++ b/src/app/views/scan-card/logged/logged.component.scss
@@ -1,19 +1,19 @@
 .wrapper {
     background: black;
-    height: 100%;
     padding: 20px;
     color: white;
+    min-height: 100vh;
 
     .date-time-display {
         color: #fff;
         background-color: #10151b;
-        padding: 14px;
+        padding: 20px;
         font-size: 22px;
         font-weight: lighter;
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 4px;
+        border-radius: 10px 10px 0 0;
         gap: 15px;
 
         .calendar-icon {
@@ -34,10 +34,11 @@
     }
 
     .form-container {
-        margin-top: 180px;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        background-color: #1a2733;
+        border-radius: 0 0 10px 10px;
+        padding: 210px 0;
 
         .title {
             font-size: 40px;
@@ -47,24 +48,30 @@
 
         .form-correct {
             font-size: 30px;
-            margin-top: 80px;
+            margin: 60px auto;
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 5px;
 
             .flex-data {
                 display: flex;
+                align-items: baseline;
 
                 .label {
                     font-weight: lighter;
-                    width: 300px;
+                    width: 280px;
+                }
+
+                .value {
+                    line-height: 1.2;
+                    width: 350px;
                 }
             }
         }
 
         .action {
-            margin-top: 35px;
             display: flex;
+            justify-content: center;
             gap: 20px;
 
             .cancel-button {
