--- a/src/app/views/scan-card/scan-card.component.html
+++ b/src/app/views/scan-card/scan-card.component.html
@@ -2,10 +2,10 @@
     <div class="background-scan">
         <button mat-raised-button class="button-login" (click)="submit()">Manual Login</button>
         <div class="flex-content">
-            <div class="heading">Scan Card To Login</div>
+            <div class="title">Proceed to Card Validator for Login</div>
             <div>
-                <div class="sub-heading">Tap Card Here</div>
-                <img src="/assets/images/scan-card/scan.png" alt="" class="scan-card" />
+                <div class="sub-title">Please Tap Staff Card</div>
+                <img src="/assets/images/scan-card/scan-image.png" alt="" class="scan-card" />
             </div>
         </div>
     </div>
