--- a/src/app/views/main/main.component.scss
+++ b/src/app/views/main/main.component.scss
@@ -1,13 +1,29 @@
 $separator-color: #99bad9;
-$font-weight-variable: 700;
+$font-weight-bold: 700;
+$font-weight-lighter: lighter;
 $font-size-variable: 16px;
+$font-size-medium: 18px;
+$font-size-label: 20px;
+$font-size-large: 28px;
+$bg-color: #00414e;
+$header-footer-height: 64px;
 
-.font-28 {
-    font-size: 28px;
+@mixin flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.font-weight {
-    font-weight: 700;
+@mixin button-style($width: 130px, $height: 40px) {
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    background-color: $bg-color;
+    height: $height;
+    width: $width;
+    justify-content: center;
+    gap: 10px;
+    font-size: $font-size-medium;
 }
 
 main {
@@ -16,73 +32,57 @@ main {
     height: 100%;
 
     .header {
-        display: flex;
+        @include flex-center;
         justify-content: space-between;
-        background-color: #022830;
-        height: 64px;
+        height: $header-footer-height;
         position: fixed;
         top: 0;
         width: 100%;
+        padding: 0 20px;
 
         .navigation-section {
-            display: flex;
-            align-items: center;
-            padding: 10px;
+            @include flex-center;
             gap: 10px;
-            font-weight: $font-weight-variable;
+            font-weight: $font-weight-bold;
             cursor: pointer;
 
-            .logout-button {
-                display: flex;
-                align-items: center;
-                border-radius: 5px;
-                background-color: #00414e;
-                height: 40px;
-                width: 130px;
-                justify-content: center;
-                gap: 10px;
-            }
+            .logout-button,
             .endtrip-button {
-                display: flex;
-                align-items: center;
-                border-radius: 5px;
-                background-color: #00414e;
-                height: 40px;
-                width: 130px;
-                justify-content: center;
-                gap: 10px;
+                @include button-style();
             }
         }
 
         .status-indicators {
-            display: flex;
-            align-items: center;
+            @include flex-center;
             justify-content: space-between;
             width: 300px;
+            gap: 50px;
 
             .status {
-                display: flex;
+                @include flex-center;
                 gap: 5px;
+                font-size: $font-size-medium;
+                font-weight: $font-weight-lighter;
             }
         }
 
         .datetime-section {
-            display: flex;
-            align-items: center;
+            @include flex-center;
             justify-content: space-between;
-            padding-right: 30px;
             gap: 10px;
+            font-size: $font-size-large;
+            font-weight: $font-weight-lighter;
 
             .date {
-                display: flex;
+                @include flex-center;
 
                 &::after {
                     content: '';
                     display: block;
                     width: 1px;
-                    height: 20px;
+                    height: 35px;
                     background-color: $separator-color;
-                    margin-left: 20px;
+                    margin-left: 14px;
                     opacity: 0.25;
                 }
             }
@@ -90,12 +90,12 @@ main {
     }
 
     .content {
-        background-color: #022830;
+        background: linear-gradient(#00151a 40%, #022830);
         height: 100%;
-        padding: 64px 10px 74px 10px;
-        justify-content: space-between;
+        padding: $header-footer-height 20px 64px;
         display: flex;
         gap: 10px;
+        justify-content: space-between;
 
         .status-wrapper {
             flex: 30%;
@@ -110,19 +110,19 @@ main {
                 row-gap: 15px;
                 column-gap: 10px;
                 padding: 10px;
+                height: 340px;
 
                 .title {
                     background: #000d10;
-                    height: 90px;
-                    align-items: center;
-                    border-radius: 3px;
+                    height: 95px;
                     display: flex;
-                    gap: 50px;
+                    align-items: end;
+                    border-radius: 3px;
 
                     .status-icon {
                         display: flex;
                         flex-direction: column;
-                        justify-self: center;
+                        justify-content: center;
                         padding: 10px;
                         height: 100%;
                         font-size: 32px;
@@ -130,67 +130,94 @@ main {
                         background-color: #17333d;
                     }
                     .icon-text {
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        align-items: center;
-                        text-align: center;
-                        gap: 3px;
+                        margin: 0 auto;
+
+                        .text {
+                            margin-top: 5px;
+                            font-size: $font-size-variable;
+                            font-weight: $font-weight-lighter;
+                            text-align: center;
+                        }
                     }
                 }
             }
+
             .button-control {
                 display: grid;
                 grid-template-columns: repeat(6, 1fr);
                 grid-template-rows: repeat(6, 1fr);
-                gap: 10px;
+                gap: 20px 25px;
                 height: 100%;
-                padding: 20px 10px 10px;
-            }
+                padding: 25px 0;
+                font-size: 22px;
 
-            .button {
-                background-color: #00414e;
-                border-radius: 5px;
-                text-align: center;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                cursor: pointer;
-                gap: 3px;
-                background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
+                .button {
+                    background-color: #00414e;
+                    border-radius: 5px;
+                    text-align: center;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    cursor: pointer;
+                    background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
+                    line-height: 35px;
+                    transition: 0.2s ease-in-out 0s;
 
-                &.item1 {
-                    grid-row: 1 / 3;
-                    grid-column: 1 / 3;
-                }
-                &.item2 {
-                    grid-row: 3 / 5;
-                    grid-column: 1 / 3;
-                }
-                &.item3 {
-                    grid-row: 5 / 7;
-                    grid-column: 1 / 3;
-                }
-                &.item4 {
-                    grid-row: 1 / 3;
-                    grid-column: 3 / 5;
-                }
-                &.item5 {
-                    grid-row: 3 / 5;
-                    grid-column: 3 / 5;
-                }
-                &.item6 {
-                    grid-row: 5 / 7;
-                    grid-column: 3 / 5;
-                }
-                &.item7 {
-                    grid-row: 1 / 4;
-                    grid-column: 5 / 7;
-                }
-                &.item8 {
-                    grid-row: 4 / 7;
-                    grid-column: 5 / 7;
+                    &.item1 {
+                        grid-row: 1 / 3;
+                        grid-column: 1 / 3;
+                    }
+                    &.item2 {
+                        grid-row: 3 / 5;
+                        grid-column: 1 / 3;
+                    }
+                    &.item3 {
+                        grid-row: 5 / 7;
+                        grid-column: 1 / 3;
+                    }
+                    &.item4 {
+                        grid-row: 1 / 3;
+                        grid-column: 3 / 5;
+                    }
+                    &.item5 {
+                        grid-row: 3 / 5;
+                        grid-column: 3 / 5;
+                    }
+                    &.item6 {
+                        grid-row: 5 / 7;
+                        grid-column: 3 / 5;
+
+                        img.icon {
+                            margin: 10px 0 3px;
+                        }
+                    }
+                    &.item7 {
+                        grid-row: 1 / 4;
+                        grid-column: 5 / 7;
+
+                        .icon-up {
+                            height: 40px;
+                        }
+
+                        &:hover {
+                            cursor: pointer;
+                            transform: scale(1.05);
+                        }
+                    }
+                    &.item8 {
+                        grid-row: 4 / 7;
+                        grid-column: 5 / 7;
+
+                        .icon-down {
+                            height: 45px;
+                        }
+
+                        &:hover {
+                            cursor: pointer;
+                            transform: scale(1.05);
+                        }
+                    }
                 }
             }
         }
@@ -199,25 +226,22 @@ main {
             flex: 70%;
             padding: 10px;
             background-color: #0e2931;
-            height: 656px;
             display: flex;
             flex-direction: column;
+            height: auto;
 
             .info {
                 display: flex;
                 height: 280px;
-                background-color: #fff;
 
                 .detail {
                     flex: 70%;
-                    background-color: #fff;
                     display: flex;
                     flex-direction: column;
 
                     .information {
                         display: grid;
-                        background-color: #0e2931;
-                        padding: 45px 20px 50px;
+                        padding: 45px 10px 50px;
                         height: 100%;
                         gap: 30px;
 
@@ -226,12 +250,15 @@ main {
                             gap: 10px;
 
                             .title {
-                                font-size: 18px;
+                                font-size: $font-size-medium;
+                                font-weight: $font-weight-lighter;
                             }
 
                             .number {
+                                margin-top: 12px;
                                 font-size: 64px;
                                 color: #fed000;
+                                font-weight: $font-weight-bold;
                             }
                         }
 
@@ -239,13 +266,25 @@ main {
                             display: grid;
                             gap: 20px;
 
+                            .plate-number {
+                                font-size: $font-size-label;
+                                font-weight: $font-weight-lighter;
+                            }
+                            span.number {
+                                font-size: $font-size-large;
+                                font-weight: bold;
+                            }
                             .route {
                                 display: flex;
                                 gap: 30px;
-                            }
 
-                            .bold {
-                                font-weight: 700;
+                                .label-data {
+                                    font-weight: $font-weight-lighter;
+                                    font-size: $font-size-label;
+                                    .data {
+                                        font-weight: bold;
+                                    }
+                                }
                             }
                         }
                     }
@@ -267,16 +306,23 @@ main {
 
                         .title-headway {
                             font-size: $font-size-variable;
+                            display: flex;
                             flex-direction: column;
                             gap: 25px;
-                            display: flex;
                             padding: 20px;
 
                             .lebal-headway {
-                                font-size: 28px;
+                                font-size: $font-size-large;
+                                font-weight: $font-weight-bold;
+                            }
+
+                            .time {
+                                font-size: $font-size-large;
+                                font-weight: $font-weight-lighter;
                             }
                         }
                     }
+
                     .headway-bottom {
                         background-color: #0f65a1;
                         display: flex;
@@ -286,53 +332,66 @@ main {
                         border-radius: 0 0 5px 5px;
 
                         .title-headway {
-                            display: flex;
-                            align-items: center;
+                            @include flex-center;
                             gap: 20px;
                             margin-left: 10px;
 
                             .title-right {
-                                font-size: 28px;
+                                font-size: $font-size-large;
+                                font-weight: $font-weight-bold;
                             }
                         }
                     }
                 }
             }
 
+            hr {
+                border: 1px solid #051c27;
+            }
+
             .group {
-                background-color: #0f2d36;
                 display: flex;
                 flex-direction: column;
-                gap: 10px;
+                gap: 15px;
                 height: 100%;
-                padding: 10px;
+                padding: 15px 10px;
+                overflow-y: auto;
 
                 .indicator {
                     background-color: blue;
-                    display: flex;
-                    justify-content: space-between;
-                    padding: 25px 10px;
+                    padding: 50px 10px;
                     position: relative;
+                    height: 88px;
 
                     .left {
                         position: absolute;
                         top: 0;
                         left: 0;
                         text-align: center;
+                        font-size: $font-size-medium;
+                        padding: 5px 15px;
+                        border-end-end-radius: 4px;
+                        font-weight: $font-weight-bold;
                     }
 
                     .right {
                         position: absolute;
                         top: 0;
                         right: 0;
+                        background: #fed000;
+                        width: 37px;
+                        height: 24px;
+                        border-end-start-radius: 4px;
                     }
 
-                    .name {
-                        font-size: 28px;
-                    }
+                    .matd-indicatior {
+                        display: flex;
+                        justify-content: space-between;
 
-                    .time {
-                        font-size: 28px;
+                        .name,
+                        .time {
+                            font-size: $font-size-large;
+                        }
                     }
                 }
             }
@@ -342,7 +401,7 @@ main {
     .footer {
         width: 100%;
         background-color: #000000;
-        height: 64px;
+        height: $header-footer-height;
         position: fixed;
         bottom: 0;
         display: grid;
@@ -350,9 +409,7 @@ main {
 
         .nav-item {
             font-size: 24px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            @include flex-center;
             gap: 10px;
             cursor: pointer;
 
@@ -363,6 +420,11 @@ main {
             &:hover {
                 color: #fed001;
             }
+        }
+
+        .active-link {
+            color: #fed001;
+            font-weight: bold;
         }
     }
 }
