feat: add layout components & active menu

--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -201,22 +201,5 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="nav-item">
-            <img src="/assets/images/icons/main/madt-icon-main.svg" alt="" />
-            Main
-        </div>
-        <div class="nav-item">
-            <img src="/assets/images/icons/main/ticket-icon.svg" alt="" />
-            Ticketing
-        </div>
-        <div class="nav-item">
-            <img src="/assets/images/icons/main/envelope-icon.svg" alt="" />
-            FMS
-        </div>
-        <div class="nav-item">
-            <img src="/assets/images/icons/main/gear-icon.svg" alt="" />
-            Maintenance
-        </div>
-    </div>
+    <app-navbar />
 </main>
