--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,6 +1,2 @@
-<p>layout works!</p>
-
-<app-header></app-header>
-<app-sidenav></app-sidenav>
-<app-dashboard></app-dashboard>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
+<app-navbar> ></app-navbar>
