--- a/src/app/views/main/main.component.scss
+++ b/src/app/views/main/main.component.scss
@@ -1,5 +1,7 @@
 $separator-color: #99bad9;
 $font-weight-bold: 700;
+$font-weight-extra-bold: 800;
+$font-weight-semi-bold: 600;
 $font-weight-lighter: lighter;
 $font-size-variable: 16px;
 $font-size-medium: 18px;
@@ -29,7 +31,7 @@ $header-footer-height: 64px;
 main {
     color: white;
     width: 100%;
-    height: 100%;
+    height: calc(100% - #{$header-footer-height});
 
     .header {
         @include flex-center;
@@ -92,14 +94,14 @@ main {
 
     .content {
         background: linear-gradient(#00151a 40%, #022830);
-        height: calc(100% - #{$header-footer-height});
+        height: 100%;
         padding: $header-footer-height 20px 0;
         display: flex;
         gap: 10px;
         justify-content: space-between;
 
         .status-wrapper {
-            flex: 30%;
+            flex-basis: 400px;
             display: flex;
             flex-direction: column;
 
@@ -133,10 +135,16 @@ main {
                     .icon-text {
                         margin: 0 auto;
 
+                        img {
+                            margin: auto;
+                            display: block;
+                            margin-bottom: 8px;
+                        }
+
                         .text {
                             margin-top: 5px;
+                            margin-bottom: 5px;
                             font-size: $font-size-variable;
-                            font-weight: $font-weight-lighter;
                             text-align: center;
                         }
                     }
@@ -151,6 +159,7 @@ main {
                 height: 100%;
                 padding: 25px 0;
                 font-size: 22px;
+                font-weight: $font-weight-semi-bold;
 
                 .button {
                     background-color: #00414e;
@@ -162,8 +171,11 @@ main {
                     justify-content: center;
                     cursor: pointer;
                     background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
-                    line-height: 35px;
                     transition: 0.2s ease-in-out 0s;
+
+                    img {
+                        padding-bottom: 5px;
+                    }
 
                     &.item1 {
                         grid-row: 1 / 3;
@@ -224,7 +236,7 @@ main {
         }
 
         .service {
-            flex: 70%;
+            flex: 1;
             padding: 10px;
             background-color: #0e2931;
             display: flex;
@@ -236,13 +248,13 @@ main {
                 height: 280px;
 
                 .detail {
-                    flex: 70%;
+                    flex: 1;
                     display: flex;
                     flex-direction: column;
 
                     .information {
                         display: grid;
-                        padding: 45px 10px 50px;
+                        padding: 12 10px;
                         height: 100%;
                         gap: 30px;
 
@@ -259,7 +271,7 @@ main {
                                 margin-top: 12px;
                                 font-size: 64px;
                                 color: #fed000;
-                                font-weight: $font-weight-bold;
+                                font-weight: $font-weight-extra-bold;
                             }
                         }
 
@@ -283,7 +295,7 @@ main {
                                     font-weight: $font-weight-lighter;
                                     font-size: $font-size-label;
                                     .data {
-                                        font-weight: bold;
+                                        font-weight: $font-weight-semi-bold;
                                     }
                                 }
                             }
@@ -292,17 +304,18 @@ main {
                 }
 
                 .headway {
-                    flex: 30%;
+                    flex-basis: 300px;
                     display: flex;
                     flex-direction: column;
-                    padding: 10px;
+                    margin-top: 10px;
+                    margin-right: 10px;
                     background-color: #0e2932;
 
                     .headway-top {
                         display: flex;
                         background-color: #0d598e;
                         align-items: center;
-                        padding: 20px;
+                        padding: 12px;
                         border-radius: 5px 5px 0 0;
 
                         .title-headway {
@@ -314,12 +327,11 @@ main {
 
                             .lebal-headway {
                                 font-size: $font-size-large;
-                                font-weight: $font-weight-bold;
+                                font-weight: $font-weight-semi-bold;
                             }
 
                             .time {
                                 font-size: $font-size-large;
-                                font-weight: $font-weight-lighter;
                             }
                         }
                     }
@@ -339,7 +351,7 @@ main {
 
                             .title-right {
                                 font-size: $font-size-large;
-                                font-weight: $font-weight-bold;
+                                font-weight: $font-weight-semi-bold;
                             }
                         }
                     }
@@ -360,7 +372,12 @@ main {
 
                 .indicator {
                     background-color: blue;
-                    padding: 50px 10px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    // padding: 40px 10px;
+                    padding-left: 10px;
+                    padding-right: 10px;
                     position: relative;
                     height: 88px;
 
@@ -388,6 +405,7 @@ main {
                     .matd-indicatior {
                         display: flex;
                         justify-content: space-between;
+                        padding-top: 12px;
 
                         .name,
                         .time {
