fix(main): add border gradient to button

--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -100,34 +100,50 @@
             </div>
             <div class="button-control">
                 <div class="button item1">
-                    <img src="/assets/images/icons/main/brkdwn.svg" alt="" />
-                    <p>Brkdwn</p>
+                    <div class="inner">
+                        <img src="/assets/images/icons/main/brkdwn.svg" alt="" />
+                        <p>Brkdwn</p>
+                    </div>
                 </div>
                 <div class="button item2">
-                    <img src="/assets/images/icons/main/farebox.svg" alt="" />
-                    <p>Fare Box</p>
+                    <div class="inner">
+                        <img src="/assets/images/icons/main/farebox.svg" alt="" />
+                        <p>Fare Box</p>
+                    </div>
                 </div>
                 <div class="button item3">
-                    <img src="/assets/images/icons/main/frontexit.svg" alt="" />
-                    <p>Front Exit</p>
+                    <div class="inner">
+                        <img src="/assets/images/icons/main/frontexit.svg" alt="" />
+                        <p>Front Exit</p>
+                    </div>
                 </div>
                 <div class="button item4">
-                    <img src="/assets/images/icons/main/free.svg" alt="" />
-                    <p>Free</p>
+                    <div class="inner">
+                        <img src="/assets/images/icons/main/free.svg" alt="" />
+                        <p>Free</p>
+                    </div>
                 </div>
                 <div class="button item5">
-                    <img src="/assets/images/icons/main/coins.svg" alt="" />
-                    <p>Fare</p>
+                    <div class="inner">
+                        <img src="/assets/images/icons/main/coins.svg" alt="" />
+                        <p>Fare</p>
+                    </div>
                 </div>
                 <div class="button item6">
-                    <img src="/assets/images/icons/main/msg.svg" alt="" class="icon" />
-                    <p>FMS Msg</p>
+                    <div class="inner">
+                        <img src="/assets/images/icons/main/msg.svg" alt="" />
+                        <p>FMS Msg</p>
+                    </div>
                 </div>
                 <div class="button item7">
-                    <img src="/assets/images/icons/main/polygon.svg" alt="" class="icon-up" />
+                    <div class="inner">
+                        <img src="/assets/images/icons/main/polygon.svg" alt="" class="icon-up" />
+                    </div>
                 </div>
                 <div class="button item8">
-                    <img src="/assets/images/icons/main/downarrow.svg" alt="" class="icon-down" />
+                    <div class="inner">
+                        <img src="/assets/images/icons/main/downarrow.svg" alt="" class="icon-down" />
+                    </div>
                 </div>
             </div>
         </div>
