--- a/src/app/views/main/main.component.scss
+++ b/src/app/views/main/main.component.scss
@@ -180,39 +180,135 @@ main {
                     &.item1 {
                         grid-row: 1 / 3;
                         grid-column: 1 / 3;
+                        display: inline-block;
+                        padding: 2px;
+                        border-radius: 5px;
+                        background: linear-gradient(to bottom right, #99b3b8 18%, #2e6772 50%);
+
+                        .inner {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
+                            border-radius: 4px;
+                            height: 100%;
+                        }
                     }
                     &.item2 {
                         grid-row: 3 / 5;
                         grid-column: 1 / 3;
+                        display: inline-block;
+                        padding: 2px;
+                        border-radius: 5px;
+                        background: linear-gradient(to bottom right, #99b3b8 18%, #2e6772 50%);
+
+                        .inner {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
+                            border-radius: 4px;
+                            height: 100%;
+                        }
                     }
                     &.item3 {
                         grid-row: 5 / 7;
                         grid-column: 1 / 3;
+                        display: inline-block;
+                        padding: 2px;
+                        border-radius: 5px;
+                        background: linear-gradient(to bottom right, #99b3b8 18%, #2e6772 50%);
+
+                        .inner {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
+                            border-radius: 4px;
+                            height: 100%;
+                        }
                     }
                     &.item4 {
                         grid-row: 1 / 3;
                         grid-column: 3 / 5;
+                        display: inline-block;
+                        padding: 2px;
+                        border-radius: 5px;
+                        background: linear-gradient(to bottom right, #99b3b8 18%, #2e6772 50%);
+
+                        .inner {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
+                            border-radius: 4px;
+                            height: 100%;
+                        }
                     }
                     &.item5 {
                         grid-row: 3 / 5;
                         grid-column: 3 / 5;
+                        display: inline-block;
+                        padding: 2px;
+                        border-radius: 5px;
+                        background: linear-gradient(to bottom right, #99b3b8 18%, #2e6772 50%);
+
+                        .inner {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
+                            border-radius: 4px;
+                            height: 100%;
+                        }
                     }
                     &.item6 {
                         grid-row: 5 / 7;
                         grid-column: 3 / 5;
+                        display: inline-block;
+                        padding: 2px;
+                        border-radius: 5px;
+                        background: linear-gradient(to bottom right, #99b3b8 18%, #2e6772 50%);
 
-                        img.icon {
-                            margin: 10px 0 3px;
+                        .inner {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            gap: 5px;
+                            background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
+                            border-radius: 4px;
+                            height: 100%;
+                        }
+                        img {
+                            margin-top: 5px;
                         }
                     }
                     &.item7 {
                         grid-row: 1 / 4;
                         grid-column: 5 / 7;
+                        display: inline-block;
+                        padding: 2px;
+                        border-radius: 5px;
+                        background: linear-gradient(to bottom right, #99b3b8 18%, #2e6772 50%);
 
+                        .inner {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
+                            border-radius: 4px;
+                            height: 100%;
+                        }
                         .icon-up {
                             height: 40px;
                         }
-
                         &:hover {
                             cursor: pointer;
                             transform: scale(1.05);
@@ -221,11 +317,23 @@ main {
                     &.item8 {
                         grid-row: 4 / 7;
                         grid-column: 5 / 7;
+                        display: inline-block;
+                        padding: 2px;
+                        border-radius: 5px;
+                        background: linear-gradient(to bottom right, #99b3b8 18%, #2e6772 50%);
 
+                        .inner {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            background: linear-gradient(to bottom, #00414e 0%, #225c68 100%);
+                            border-radius: 4px;
+                            height: 100%;
+                        }
                         .icon-down {
                             height: 45px;
                         }
-
                         &:hover {
                             cursor: pointer;
                             transform: scale(1.05);
